# arm_r

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  Makefile  VERSION.cmd  build.cmd  custom.mak  install-phononBackend.cmake  log  mkrel.bat  mkrel.cmd  mkrel.sh  nsis.cmake  nsisParams.cmake  product.mak  settings.mak  version.ini
build1/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  ZaviruhaR.cbp  cmake_install.cmake  cmake_uninstall.cmake
build1/docs/: CTestTestfile.cmake  Makefile  ZaviruhaRDocs.cbp  cmake_install.cmake
build1/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: CodeCoverage.cmake  CommonInit.cmake  FindExiv2.cmake  FindFFMPEG.cmake  FindJsoncpp.cmake  FindNsl2.cmake  FindOpenCV.cmake  FindPcap.cmake  FindProj4.cmake  FindProtobuf.cmake  FindQSerialPort.cmake  FindQwt.cmake  FindROHC.cmake  FindTurboJpeg.cmake  FindWinPcap.cmake  UsefulMacros.cmake  armtoolchain.cmake
docs/: CMakeLists.txt  Zaviruha_instruction.docx  nsis.cmake  ПредложенияПАА_МПШ__28_01_2016.doc
flakonTest/: Server.cpp  Server.h  main.cpp  srv.pro
install/: imagedef.xml  makeimage-win32-common.mak  mkrel-unix.mak  mkrel-win32.mak
install/DEBIAN/: control  postinst
redist/: .svnexternals
redist/MySql/: README.txt  arm_r_tablesTest.sql  stations.sql
redist/PwLogger-win32/: buildinfo.cmd
redist/integration/: .svnexternals  driver-hg.mak  driver-svn.mak  mkbuild.mak  mkimage.xsl  openbuild.mak  openrelease.mak
redist/maps/: Gruzia.chart  gruzia.inf
redist/phonon_backend/: phonon_ds94.lib  phonon_ds9d4.lib
scripts/: common.mak  common.pri  project.mak
scripts/make-common/: build-astra.mak  build-help.mak  build-linux.mak  build-mingw.mak  build-msvc.mak  build-msvs.mak  build-prepare.mak  build-project.mak  build-reference.mak  build-solution.mak  common-buildprofile.mak  common-environment.mak  common-functions.mak  common-platform.mak  common-qmake.mak  common-target.mak  common-version.mak  fix-generated-sln.mak  target-satellite.mak
scripts/qmake-common/: 10.spec.pri  14.version-file.pri  15.target.pri  15.version.pri  16.solution.pri  20.build.pri  22.library.pri  22.qtlibrary.pri  23.reference.pri  49.product-warning.pri  50.prebuild.pri  60.postbuild.pri  71.buildlib.pri  72.axserver.pri  80.defines.pri  Makefile
scripts/templates/: product.mak  project.pri  reference.pri
settings/: ARM_R.ini
settings/DB/: db_bla.sqlite
settings/KTR/: KTR.ini
settings/Map/: map_objects.ini  map_objects1.ini
settings/RDS/: DRCorrection.ini
settings/Rpc/: RpcServer.ini
settings/TCP/: coders.ini  coders1.ini  coders_local.ini
settings/Tabs/: Db.ini  RPC.ini  Tabs.ini  Tabs2.ini  localmail.ini  mail.ini  record.ini  remotemail.ini
specs/: CISCommonLib.pri  GraphicsIpp.pri  Solver.mak  Solver.pri  dbmysqlsources.mak  get-runtime.mak  imageformats.mak  ipp.mak  ipp.pri  logger.mak  logger.pri  project.mak  project.pri  protobuf.mak  protobuf.pri  pwgis.mak  pwgis.pri  pwgiswidget-logger.pri  pwgiswidget.pri  qtsingleapplication.pri  qxt.mak  qxt.pri  settings.mak  sqldrivers (2).mak  sqldrivers.mak  tbb.mak  tbb.pri  updateclient.pri
sql/: README.txt  arm_r_tables.sql  arm_r_tablesTest.sql  create_db.cmd  create_test_db.cmd  stations.sql  stations2.sql
src/: ARM_OD.pro  ARM_OD_Server.pri  ARM_OD_Server_project.pro  ARM_OD_UI.pri  ARM_OD_UI.pro  ARM_R.pro  ARM_R_Server.pri  ARM_R_Server_project.pro  ARM_R_UI.pri  ARM_R_UI.pro  ARM_R_projects.pri  CMakeLists.txt  Makefile
src/ARM_OD_Common/: ARM_OD_Common.pro  Makefile  Makefile.Debug  Makefile.Release
src/ARM_OD_Server/: ARM_OD_Server.pro  ARM_OD_Server_resource.rc  ARM_OD_Serverd_resource.rc  Makefile  Makefile.Debug  Makefile.Release  main.cpp  product.mak
src/ARM_OD_ServerCore/: ARM_OD_Application.cpp  ARM_OD_Application.h  ARM_OD_ServerCore.pro  ARM_OD_ServerCore_resource.rc  ARM_OD_ServerCored_resource.rc  ARM_OD_Srv.cpp  ARM_OD_Srv.h  Makefile  Makefile.Debug  Makefile.Release  reference.pri  source.cpp
src/ARM_OD_ServerCoreTest/: ARM_OD_ServerCoreTest.pro  ARM_OD_ServerCoreTest_resource.rc  ARM_OD_ServerCoreTestd_resource.rc  Makefile  Makefile.Debug  Makefile.Release  product.mak  test.h  testsuite.generated.cpp
src/ARM_OD_view/: ARM_OD_view.pro  ARM_OD_view_resource.rc  ARM_OD_viewd_resource.rc  Makefile  Makefile.Debug  Makefile.Release  main.cpp  product.mak
src/ARM_OD_viewCore/: ARM_OD_viewCore.pro  MainWindow.cpp  MainWindow.h  MainWindowController.cpp  MainWindowController.h  Makefile  Makefile.Debug  Makefile.Release  arm_od_view.cpp  arm_od_view.h  arm_od_view.ui  rc.qrc  translations.qrc
src/ARM_OD_viewCoreTest/: ARM_OD_viewCoreTest.pro  ARM_OD_viewCoreTest_resource.rc  ARM_OD_viewCoreTestd_resource.rc  Makefile  Makefile.Debug  Makefile.Release  product.mak  testdb.h  testsuite.generated.cpp
src/ARM_R_Common/: ARM_R_Common.pro  BaseSubject.h  CommonDefines.h  Message.h  SingletonTemplate.h  TcpDevicesDefines.h  product.mak  reference.pri
src/ARM_R_Server/: ARM_R_Server.pro  ARM_R_Serverd_resource.rc  ARM_R_server.log4qt  Server.bat  main.cpp  product.mak
src/ARM_R_ServerCore/: ARM_R_Application.cpp  ARM_R_Application.h  ARM_R_ServerCore.pro  ARM_R_Srv.cpp  ARM_R_Srv.h  MessageSP.h  reference.pri
src/ARM_R_ServerCoreTest/: ARM_R_ServerCoreTest.pro  ARM_R_ServerCoreTestd_resource.rc  product.mak  testDBIB.h  testSettings.h  testsuite.cpp
src/ARM_R_view/: ARM_R_view.log4qt  ARM_R_view.pro  View.bat  main.cpp  product.mak  rc.qrc
src/ARM_R_viewCore/: ARM-R_en.ts  ARM-R_ru.qm  (+54 more)
src/server/app/: ARM_R_Server_resource.rc  CMakeLists.txt  Server.bat  details_res.rc  main.cpp  qt.conf  version.h.in
src/server/app/DB/: db_model.ini
src/server/app/RDS/: DRCorrection.ini
src/server/app/TCP/: coders1.ini
src/server/app/Tabs/: Db.ini  RPC.ini  Tabs2.ini  Tabs_Sof.ini
src/view/app/: ARM_R.ini  ARM_R_view_resource.rc  ARM_R_viewd_resource.rc  CMakeLists.txt  Platform.bat  View.bat  Zaviruha.sqlite  details_res.rc  main.cpp  rc.qrc  version.h  version.h.in
tools/: .svnexternals  update-externals.cmd
(+2125 files in other folders)
